Fix card layout
The divs werne't overlaping

--- a/app/assets/stylesheets/pages/_landing_page.scss
+++ b/app/assets/stylesheets/pages/_landing_page.scss
@@ -155,6 +155,9 @@
     }
 
     .sample-spaces-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       background-color: #FFF;
       border-radius: 40px;
       padding: 2rem 3rem 1rem;
